--- a/src/app/component/counterdisplay/counterdisplay.component.html
+++ b/src/app/component/counterdisplay/counterdisplay.component.html
@@ -1,1 +1,4 @@
+<!-- <h1>{{(counter$ | async)?.costumname}}</h1>
+<h2>Counter value: <b>{{(counter$ | async)?.counter}}</b></h2> -->
 <h2>Counter value: <b>{{contervalue}}</b></h2>
+
