--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <div style="text-align: center;">
   <app-counterbutton></app-counterbutton>
 <app-counterdisplay></app-counterdisplay>
+<app-customnumber></app-customnumber>
+<app-blog></app-blog>
 </div>
