--- a/src/app/component/counterbutton/counterbutton.component.html
+++ b/src/app/component/counterbutton/counterbutton.component.html
@@ -1,4 +1,5 @@
 <h1>Counter Application</h1>
-<button (click)="Increment()">Incement (+)</button>
-<button (click)="Decrement()">Decrement (-)</button>
-<button (click)="Reset()">Reset</button>
+<button mat-raised-button color="primary" (click)="Increment()" >Incement (+)</button>
+<button mat-raised-button color="accent" (click)="Decrement()">Decrement (-)</button>
+<button mat-raised-button color="warn" (click)="Reset()">Reset</button>
+<button mat-raised-button color="warn" (click)="Rename()">Reset</button>
