--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet>
 <div style="text-align: center;">
   <app-counterbutton></app-counterbutton>
 <app-counterdisplay></app-counterdisplay>
 <app-customnumber></app-customnumber>
 <app-blog></app-blog>
-</div>
+</div> -->
+<app-progressbar></app-progressbar>
