--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,5 @@
 <app-blog></app-blog>
 </div> -->
 <app-progressbar></app-progressbar>
+<app-customnumber></app-customnumber>
+<app-counterdisplay></app-counterdisplay>
