--- a/src/app/component/customnumber/customnumber.component.html
+++ b/src/app/component/customnumber/customnumber.component.html
@@ -16,7 +16,10 @@
             </mat-select>
             
         </mat-form-field>
+       
         <br>
         <button mat-raised-button colo="primary" (click)="customnumber()">Proceed</button>
     </mat-card-content>
 </mat-card>
+<app-progressbar
+[inputValue]="inputValue"></app-progressbar>
